Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
None
-
None
Description
The per-role Suppress call implementation is broken currently in the allocator, since it still uses a global 'suppress' bit for the framework.
Before fixing, we should discuss whether we want keep role within Suppress (it hasn't been released yet), or add calls to move towards consistent naming, e.g. Call::ActivateRole / Call::DeactivateRole.