Fixed the implementation of per-role Suppress / Revive calls.

The existing implementation uses a single suppression boolean which
results in incorrect handling of per-role suppression / revival.

See: https://issues.apache.org/jira/browse/MESOS-7430

Review: https://reviews.apache.org/r/58829